// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js",
    194,
    Object {
      "chunkhash": "e980c9135ae44da27275",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.e980c9135ae44da27275.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.e11f44cde7cb8ad0978b.js",
    15954,
    Object {
      "chunkhash": "e11f44cde7cb8ad0978b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.e11f44cde7cb8ad0978b.js.gz",
      },
      "size": 15954,
    },
  ],
  Array [
    "main.e11f44cde7cb8ad0978b.js.gz",
    3977,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3977,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.e980c9135ae44da27275.js",
    194,
    Object {
      "chunkhash": "e980c9135ae44da27275",
      "immutable": true,
      "javascriptModule": false,
      "size": 194,
    },
  ],
  Array [
    "main.e11f44cde7cb8ad0978b.js",
    15954,
    Object {
      "chunkhash": "e11f44cde7cb8ad0978b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.e11f44cde7cb8ad0978b.js.gz",
      },
      "size": 15954,
    },
  ],
  Array [
    "main.e11f44cde7cb8ad0978b.js.gz",
    3977,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3977,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "main.1f530d75fb1a4c0b8e4e.js",
    5103,
    Object {
      "chunkhash": "1f530d75fb1a4c0b8e4e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.1f530d75fb1a4c0b8e4e.js.gz",
      },
      "size": 5103,
    },
  ],
  Array [
    "main.1f530d75fb1a4c0b8e4e.js.gz",
    1518,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1518,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
      },
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
    20,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 20,
    },
  ],
  Array [
    "main.1f530d75fb1a4c0b8e4e.js",
    5103,
    Object {
      "chunkhash": "1f530d75fb1a4c0b8e4e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.1f530d75fb1a4c0b8e4e.js.gz",
      },
      "size": 5103,
    },
  ],
  Array [
    "main.1f530d75fb1a4c0b8e4e.js.gz",
    1518,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1518,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: warnings 1`] = `Array []`;
